force-app/main/default/objects/Parent_Rule__mdt/Parent_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Stores validation rule configurations for cross-object validation</description>
    <label>Parent Rule</label>
    <pluralLabel>Parent Rules</pluralLabel>
</CustomObject>