force-app/main/default/objects/Parent_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this rule is currently active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>