force-app/main/default/objects/Parent_Rule__mdt/fields/Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Logic__c</fullName>
    <description>Custom logic expression (e.g., "1 AND (2 OR 3)")</description>
    <label>Custom Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>