force-app/main/default/objects/Parent_Rule__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message to display when validation fails</description>
    <label>Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>